<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="stock_switch_main_color"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="stock_switch_goal_color"
        android:summary="@string/pref_description_social_recommendations_goal"
        android:title="@string/pref_title_social_recommendations_goal" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="stock_switch_goal_display"
        android:summary="@string/pref_description_social_recommendations_goal_display"
        android:title="@string/pref_title_social_recommendations_goal_display" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="95"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list_goal_percent_notice"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!-- android:capitalize="words" -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="number"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />



</PreferenceScreen>
